--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Computer Science and Political Science concentrator at Brown University. Web designer, programmer, civic advocate."
+      content="Computer Science and Political Science concentrator at Brown University. Incoming SWE intern @ Google.  Web designer, programmer, civic advocate."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
